Problems with editor

--- a/app/views/works/_writing.html.erb
+++ b/app/views/works/_writing.html.erb
@@ -1,8 +1,7 @@
-
-<div id="container" style="max-width: 70%;" ng-repeat="editor in editors">
+<div id="container" style="max-width: 70%;">
 	
- 	<form name="demo">
-		<div medium-editor></div>
+ 	<form name="demo" class="work-form">
+		<div class="texteditor" ng-model="text" medium-editor></div>
 	</form>
 
 
