--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 
 <% if user_signed_in? %>
-<input type="search" class="search" ng-model="search" placeholder="Search...">
+<input style="display: none" type="search" class="search" ng-model="search" placeholder="Search...">
 
 	<div ng-show="search" ng-repeat="user in users | filter:search" class="users">
 		<p>{{user.name}}</p>
@@ -25,7 +25,7 @@
 	
 	</div>
 
-<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'log-out' %>
+<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'log-out', style: 'display:none' %>
 
 <% end %>
 
