--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= csrf_meta_tags %>
   <!-- <base href="/" /> -->
 </head>
-<body ng-controller="FfolioCtrl">
+<body>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
