now profile avatar updates

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,8 +47,8 @@
 					<div class="work-preview">
 						<div class="work-preview-header">
 							<h3 id="selections" ng-show="profile.selection == user.workSelection">Selections of Laurie's Work</h3>
-							<h3 id="selections" ng-show="1 == 2">What Laurie Likes</h3>
-							<h3 id="selections" ng-show="1 == 2">Laurie's Stories</h3>
+							<h3 id="selections" >What Laurie Likes</h3>
+							<h3 id="selections" >Laurie's Stories</h3>
 						</div>
 
 						<div class="work-wrapper" ng-repeat="work in user.workSelection">
