--- a/app/views/works/_writing.html.erb
+++ b/app/views/works/_writing.html.erb
@@ -22,7 +22,7 @@
 			<%= f.text_field :text, id: 'texteditor', data: { :'ng-model' => 'text'} %>
 			</div>
 
-			<div class="submit-ready pull-right" ng-init="details = false" ng-click="details = !details">
+			<div class="submit-ready pull-right col-md-2" ng-init="details = false" ng-click="details = !details">
 				<a href="#" class="add-details"><p>Add Details</p></a>
 			</div>
 
@@ -30,44 +30,45 @@
 			<div ng-show="details" class="form-wrapper col-md-12">
 
 				<div class="row">
-					<div class="col-md-12">
-						<%= f.label :title %>
-						<%= f.text_field :title, required: true %>
+					<div class="col-md-12 title-field">
+						<%= f.text_field :title, required: true, placeholder: 'Title' %>
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="file-field">
-						<div class="col-md-12">
-							<%= f.label :image, 'Thumbnail' %>
-							<%= f.file_field :image, required: true, data: {:"ng-file-select" => "onFileSelect($files)"}%>
+					<div class="field-wrapper col-md-12">
+						<div class="file-field">
+							<!-- <div class="col-md-12"> -->
+								<%= f.label :image, 'Thumbnail', class: 'thumbnail-label' %>
+								<%= f.file_field :image, required: true, data: {:"ng-file-select" => "onFileSelect($files)"}%>
+									<img ng-show="imageSrc" ng-src="{{imageSrc}}" />
+							<!-- </div> -->
 						</div>
 					</div>
 				</div>
 
-				<div class="row" ng-show="{{imageSrc}}">
-					<div class="col-md-12">
-						<img ng-src="{{imageSrc}}" />
-					</div>
-					
-				</div>
+
 
 
 				<div class="row">
 					<div class="col-md-12">
-						<%= f.label :genre_names, 'Genres' %>
-						<%= f.text_field :genre_names, value: '' %>
+
+						<%= f.text_field :genre_names, value: '', placeholder: 'Genre' %>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="col-md-12">
-						<%= f.label :caption, 'Short Description' %>
-						<%= f.text_field :caption %>
+
+						<%= f.text_area :caption, placeholder: 'Short Description' %>
 					</div>
 				</div>
 
-				<%= f.submit 'Publish' %>
+				<div class="row">
+					<div class="col-md-12 submit-button">
+						<%= f.submit 'Publish', class: 'form-submit btn btn-default' %>
+					</div>
+				</div>
 			</div>
 
 		</div>
