Will come back to text later. Moving on

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -30,8 +30,10 @@
 				</a>
 
 				<h1 class="collection-title"
-				ng-hide="editable">
+				ng-hide="editable"><a href="/users/{{userId}}/collections/{{collection.id}}">
 					{{collection.title}}
+					</a>
+					<!-- </a> -->
 				</h1>		
 
 
