--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -13,16 +13,20 @@ body, a{
 }
 .navbar-nav{
   margin-bottom:2em;
+  /*margin: 0 auto;*/
+  float:none !important;
+  margin: 0 auto !important;
+
 }
 .navbar-nav > li > a, .navbar-nav > li > a:hover {
   padding-right:5em !important;
   font-size: 1.125em !important;
-  backgroundcolor: none !important;
+  background-color: none !important;
 }
 .navbar-nav a, a.visit-collection{
-  font-family: 'Merriweather', serif!important;
-  font-style: italic;
-  font-weight: 700 !important;
+  font-family: 'Lato', sans-serif!important;
+  /*font-style: italic;*/
+  font-weight: 300 !important;
 }
 
 .collection-{
@@ -32,7 +36,7 @@ body, a{
   margin-bottom: 6em;
 }
 .collection- h2{
-  font-style: italic;
+  /*font-style: italic;*/
   font-weight: 700;
   font-size: 1.5em;
   margin: .25em 0 .75em 0;
@@ -47,7 +51,9 @@ body, a{
 }
 .thumb{
   width: 60px;
+  height: 60px;
   margin-right: .75em;
+  overflow: hidden;
 }
 .add-images{
   font-size: 2em !important;
@@ -56,7 +62,7 @@ body, a{
 .btn, .btn:hover, .btn:visited{
   border-radius: 0px !important;
   border: 0px;
-  background-color: #000;
+  background-color: #000 !important;
   color: #fff;
 }
 a.visit-collection{
@@ -65,3 +71,42 @@ a.visit-collection{
   text-align: center;
   display: block;
 }
+
+p.add-button {
+	text-indent: -99999px;
+	width: 0px;
+	height: 0px;
+	overflow: hidden;
+}
+
+h2.collection-title {
+	font-family: Lato, sans-serif;
+	text-transform: uppercase;
+	font-size: 1.25em;
+}
+
+p.collection-description {
+	color: #b3b2b5;
+	letter-spacing: 0.01rem;
+	font-weight: 300;
+}
+
+button.add-details {
+	border: none;
+	background: none;
+	font-weight: 300;
+}
+
+span.glyphicon-edit {
+	font-size: 20px;
+	/*font-weight: 100;*/
+}
+
+input.image-submit {
+	display: none;
+}
+
+/*div.file-field.profile-image {
+	top 
+}*/
+
