--- a/app/assets/stylesheets/works.css.scss
+++ b/app/assets/stylesheets/works.css.scss
@@ -61,13 +61,6 @@ div.form-wrapper {
 	margin: 0 auto;
 }
 
-/*div.title-field {
-	height: 35px;
-	line-height: 35px;
-	vertical-align: middle;
-}*/
-
-
 
 div.form-wrapper {
 	font-family: Merriweather, serif;
@@ -100,7 +93,7 @@ div.submit-details {
   vertical-align: middle;
   color: #7f7f7f;
   margin-top: 2px;
-	background:white
+	background: transparent;
 }
 
 .file-field input[type="file"]{
