--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,87 +1,85 @@
-<div class="container">
+<div class="container" ng-controller="CollectionIndexCtrl">
+
+
     <!-- NAVBAR -->
     <header class="navbar navbar-static-top navbar-center col-xs-11 col-xs-offset-1" role="banner">
       <div class="container">
         <ul class="nav navbar-nav" role="navigation">
-          <li><a href="#">Profile</a></li>
+          <!-- <li><a href="#">Profile</a></li> -->
           <li><a href="#">Collections</a></li>
-          <li><a href="#">Random</a></li>
-          <li><a href="#">Popular</a></li>
+          <!-- <li><a href="#">Random</a></li> -->
+          <!-- <li><a href="#">Popular</a></li> -->
           <li><a href="#">All</a></li>
         </ul>
       </div>
     </header>
     <!-- END NAVBAR -->
     <!-- MAIN CONTENT -->
-    <div class="row collection-row">
+    <div ng-repeat="collection in user.collections" class="row collection-row {{collection.title}}">
       <div class="collection-">
         <div class="col-xs-3 col-xs-offset-1">
-          <img src="/assets/purple_hands.jpg" class="collection-preview img-circle">
+          <img ng-src="{{collection.image}}" class="collection-preview img-circle">
         </div>
         <div class="col-xs-5">
-          <h2>Photography 2014</h2>
-          <p>Haruki MurakamiOmmod que molupta spedit, eos am, as sa doluptati iuntiberum, sin eicate lam sedio vit, voluptatur, velendi ut et qui tent omnistotatur sam  simi.</p>
+
+					<a class="collection-title"
+					ng-show="editable"
+					editable-text="collection.title"
+					onaftersave="updateCollection('title', $data, collection.id)"
+					href="#">
+						<h2 class="collection-title">
+							{{collection.title}}
+						</h2>
+					</a>
+
+          <h2 class="collection-title" ng-hide="editable">{{collection.title}}</h2>
+
+
+
+  				<a href="#"
+						class="collection-description"
+						ng-show="editable"
+						editable-text="collection.description"
+						onaftersave="updateCollection('description', $data, collection.id)"
+						>
+						<p class="collection-description">
+							{{collection.description}}
+						</p>
+						</a>
+
+          <p class="collection-description" ng-hide="editable">{{collection.description}}</p>
           <div class="collection-samples">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
+            <img ng-repeat="work in collection.works" ng-src="{{work.image}}" class="img-circle thumb">
           </div>
-          <a href="#" class="visit-collection">more</a>
+          <!-- <a href="#" class="visit-collection">more</a> -->
         </div>
-        <div class="col-xs-2">
-          <button type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-plus add-images"></span>
-          </button>
-        </div>
+
+
+
+        <% if @user == current_user %>
+	        <div class="col-xs-2">
+	          <button class="add-details" type="button" class="btn btn-default" ng-click="upload = collection.title">
+	          	<p class="add-button">Add To {{collection.title}}</p>
+	            <span class="glyphicon glyphicon glyphicon-edit"></span>
+	          </button>
+						<div class="upload-options" ng-show = "upload == collection.title">
+							<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=art">Add Art</a>
+							<br>
+							<a href="/users/{{user.id}}/collections/{{collection.id}}/works/new?upload_type=writing">Add Writing</a>
+							<br>
+							<a href="#" ng-init="editable = false" ng-click="editable = !editable", class="toggle-edit-collection">Edit Collection</a>
+						</div>
+	        </div>
+	       <% end %>
       </div>
     </div>
-    <div class="row collection-row">
-      <div class="collection-">
-        <div class="col-xs-3 col-xs-offset-1">
-          <img src="/assets/purple_hands.jpg" class="collection-preview img-circle">
-        </div>
-        <div class="col-xs-5">
-          <h2>Illustration 2014</h2>
-          <p>Haruki MurakamiOmmod que molupta spedit, eos am, as sa doluptati iuntiberum, sin eicate lam sedio vit, voluptatur, velendi ut et qui tent omnistotatur sam  simi.</p>
-          <div class="collection-samples">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-          </div>
-          <a href="#" class="visit-collection">more</a>
-        </div>
-        <div class="col-xs-2">
-          <button type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-plus add-images"></span>
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="row collection-row">
-      <div class="collection-">
-        <div class="col-xs-3 col-xs-offset-1">
-          <img src="/assets/purple_hands.jpg" class="collection-preview img-circle">
-        </div>
-        <div class="col-xs-5">
-          <h2>Writing 2014</h2>
-          <p>Haruki MurakamiOmmod que molupta spedit, eos am, as sa doluptati iuntiberum, sin eicate lam sedio vit, voluptatur, velendi ut et qui tent omnistotatur sam  simi.</p>
-          <div class="collection-samples">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-            <img src="/assets/thumb.jpg" class="img-circle thumb">
-          </div>
-          <a href="#" class="visit-collection">more</a>
-        </div>
-        <div class="col-xs-2">
-          <button type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-plus add-images"></span>
-          </button>
-        </div>
-      </div>
-    </div>
+ 
+
+
+    <% if @user == current_user %>
+			<a href="/users/{{userId}}/collections/new">Add A New Collection</a>
+		<% end %>
+
     <!-- END MAIN CONTENT -->
   </div>
 
