--- a/app/views/users/_new_profile_pic.html.erb
+++ b/app/views/users/_new_profile_pic.html.erb
@@ -1,7 +1,8 @@
 <%= form_for @user, html: {multipart: true} do |f| %>
 
-<%= f.label :avatar %>
-<%= f.file_field :avatar %>
-<%= f.submit %>
+<div class="file-field profile-image">
+	<%= f.file_field :avatar, data: {:"ng-file-select" => "onFileSelect($files)"} %>
+</div>
+<%= f.submit class: 'image-submit' %>
 
 <% end %>
