--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,11 +14,11 @@
 
 			<div class="profile-info summary-column">
 				<div class="info-wrapper">
+			
+					<div class="pic-wrapper">
 							<div class="change-profile-pic" ng-show="editable">
 								<%= render "new_profile_pic" %>
 							</div>
-					<div class="pic-wrapper" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function">
-
 						<%= render "profile_picture" %>
 					</div>
 
