--- a/app/assets/stylesheets/works.css.scss
+++ b/app/assets/stylesheets/works.css.scss
@@ -198,5 +198,14 @@ div.form-wrapper input.form-submit::hover, input.form-submit.btn.btn-default {
 
 
 
+img.profile-pic {
+	z-index: 1;
+}
+
+img.to-edit {
+	opacity: 0.2;
+}
+
+
 
 
