--- a/app/views/users/_profile_picture.html.erb
+++ b/app/views/users/_profile_picture.html.erb
@@ -2,4 +2,4 @@
 <% if current_user.avatar.present? %>
 		<img class="profile-pic" ng-hide="imageSrc" id="profile-pic" ng-src="{{user.userImage}}">
 	<% end %>
-		<img ng-show="imageSrc" class="profile-pic" id="profile-pic" ng-src="{{imageSrc}}"/>
+		<img ng-show="imageSrc" class="profile-pic" id="profile-pic" ng-src="{{imageSrc}}">
