--- a/app/views/users/_profile_picture.html.erb
+++ b/app/views/users/_profile_picture.html.erb
@@ -1,4 +1,6 @@
 
 <% if current_user.avatar.present? %>
-		<img class="profile-pic" id="profile-pic" ng-src="{{user.userImage}}">
+	
+	<img class="profile-pic img-responsive center-block" id="profile-pic" ng-src="{{user.userImage}}">
+	
 <% end %>
