--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,38 +8,36 @@
 	<% end %>
 
 
-	<div class="container">
+
 		<div class="summary row" id="summary-section">
 	
-			<div class="profile-info summary-column text-center col-md-6">
+			<div class="profile-info summary-column col-md-6">
 				<div class="info-wrapper">
-							<div class="change-profile-pic" ng-show="editable">
-								<%= render "new_profile_pic" %>
-							</div>
+					<div class="change-profile-pic" ng-show="editable">
+						<%= render "new_profile_pic" %>
+					</div>
 					<div class="pic-wrapper" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function">
-
 						<%= render "profile_picture" %>
 					</div>
-
-					<div class="text-inputs"><%= render "information" %></div>
-					<p ng-repeat="membership in user.memberships" class="organisations text-center">{{membership.organisationRole}} of {{membership.organisation}}</p>
-				</div>
+				
+					<div class="text-inputs text-center"><%= render "information" %></div>
+					<p ng-repeat="membership in user.memberships" class="organisations">{{membership.organisationRole}} of {{membership.organisation}}</p>
+				</div>	
+		
 			</div> <!-- end of .profile-info -->
 
 
 			<div class="profile-preview summary-column col-md-6">
 
-				<div class="info-wrapper preview-wrapper">
 
-					<div class="work-preview">
-						<div class="work-preview-header">
-							<h3 id="selections">Selections of Laurie's Work</h3>
+						<div class="work-preview-header row">
+							<h3 class="col-md-12" id="selections">Selections of Laurie's Work</h3>
 						</div>
 
-						<div class="work-wrapper" ng-repeat="work in user.workSelection">
-							<div class="work">
-								<div class="work-preview-info" ng-class="{ 'story': profile.selection == storyPreview }">
-									<div id="info">
+						<div class="work-wrapper row" ng-repeat="work in user.workSelection">
+					
+							<div class="work-preview-info col-md-6" ng-class="{ 'story': profile.selection == storyPreview }">
+								<div id="info">
 										<h1 class="preview-title">{{work.title}}</h1>
 										from {{work.collection}}
 										<p class="short-description">{{work.caption}}</p>
@@ -50,19 +48,21 @@
 								</div>
 							</div>
 
-							<div class="preview-pic pic-wrapper">
-								<img class="selection" id="profile-pic" ng-src="{{work.image}}">
-							</div>
-						</div>	
-						<div class="hr-wrapper"><hr id="after-work" ng-show="!$last"></div>
+							<div class="col-md-6">	
+								<div class="preview-pic pic-wrapper">
+									<img class="selection" id="profile-pic" ng-src="{{work.image}}">
+								</div>
+
+							  <div class="hr-wrapper"><hr id="after-work" ng-show="!$last"></div>
+							</div>	
 
 					</div>
-				</div>
-			</div>
-		</div>	<!-- end of .profile-preview  -->
+		
+
+		</div>	<!-- end of .profile-preview and col-md-6 -->
 
 	</div> <!-- end of .summary .row -->
-</div> <!-- end of .container -->	
+
 
 <!-- ---------------PORTFOLIO----------- -->
 
