Currently user can't update collection picture in-page

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -18,7 +18,18 @@
     <div ng-repeat="collection in user.collections" class="row collection-row {{collection.title}}">
       <div class="collection-">
         <div class="col-xs-3 col-xs-offset-1">
+        	<h4 ng-click="testing()">Hi</h4>
+ 
+      
+
+  
+
+       <!--  		<img class="profile-pic editable-pic" id="profile-pic" ng-src="{{imageSrc}}"> -->
+
           <img ng-show="collection.image" ng-src="{{collection.image}}" class="collection-preview img-circle">
+
+
+
         </div>
         <div class="col-xs-5">
 
@@ -82,6 +93,9 @@
 		<% end %>
 
     <!-- END MAIN CONTENT -->
+
+        	<input type="file" accept="image/*" ng-file-select="onFileSelect($files)" id="collection_image" name="collection[image]" >
+    
   </div>
 
 
