Click drag edit for collection images working - though things aren't circular

--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -120,3 +120,7 @@ img.collection-preview, div.collection-samples img.thumb {
 	border-color: rgba(0,0,0,0.2);
 }
 
+img.waiting-for-image {
+  border: none;
+}
+
