--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,10 +17,26 @@
 			
 					<div class="pic-wrapper">
 							<div class="change-profile-pic" ng-show="editable">
-								<%= render "new_profile_pic" %>
+								
+								<%= form_for @user, html: {multipart: true} do |f| %>
+
+									<div class="file-field profile-image">
+										<%= f.file_field :avatar, data: {:"ng-file-select" => "onFileSelect($files)"} %>
+										<img ng-show="editable" class="profile-pic editable-pic" id="profile-pic" ng-src="{{imageSrc || user.userImage}}">
+									</div>
+
+
+								<%= f.submit class: 'image-submit' %>
+
+								<% end %>
+
+
 							</div>
-						<%= render "profile_picture" %>
-					</div>
+						<% if current_user.avatar.present? %>
+							<img class="profile-pic" ng-hide="imageSrc" id="profile-pic" ng-src="{{user.userImage}}">
+						<% end %>
+							<img ng-show="imageSrc" class="profile-pic" id="profile-pic" ng-src="{{imageSrc}}">
+						</div>
 
 					<%= render "information" %>
 					<p ng-repeat="membership in user.memberships" class="organisations">{{membership.organisationRole}} of {{membership.organisation}}</p>
