Text works displaying in collection

--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -284,10 +284,10 @@ div.text-wrapper {
   margin-right: 5%
 }
 
-p.work-paragraph {
+div.text-proper p {
   margin-bottom: 30px;
-  margin-right: 20%;
-  margin-left: 20%;
+  margin-right: 8%;
+  margin-left: 8%;
   letter-spacing: 0.01rem;
   font-style: normal;
   font-size: 20px;
